--- a/_data/template.yml
+++ b/_data/template.yml
@@ -1,7 +1,9 @@
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: 3cb371
-  secondary: 6ecf99   
+  # primary: 3cb371
+  primary: E4042C
+  # secondary: 6ecf99 
+  secondary: ff5151 
   secondary-dark: 00283c
   muted: 777
 
