--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: SinoUK AI Workshop 2022
 description: > # this means to ignore newlines until "baseurl:"
   Your description
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://bipl-uol.github.io/" # the base hostname & protocol for your site
+url: "bipl-uol.github.io" # the base hostname & protocol for your site
 # Build settings
 markdown: kramdown
 
