--- a/_data/twenty_17/speakers.yml
+++ b/_data/twenty_17/speakers.yml
@@ -1,11 +1,11 @@
-- title: Name
-  name: Name-1
-  subtitle: Position
-  img: TBD.jpg
-  thumbnail: TBD.jpg
+- title: Prof
+  name: Andrew Fitzgibbon
+  subtitle: Distinguished Engineer at Graphcore
+  img: AndrewFitzgibbon.jpg
+  thumbnail: AndrewFitzgibbon.jpg
   alt: Picture of TBD
   topic: Topic
-  description: More Info
+  description: Andrew Fitzgibbon is a Distinguished Engineer at Graphcore, working on the future of computing hardware and programming for AI and numerical computing. He is best known for his work on 3D vision. He was a core contributor to the Emmy-award-winning 3D camera tracker “boujou”, having co-founded the company “2d3”, with Andrew Zisserman, Julian Morris, and Nick Bolton; at Microsoft, he introduced massive synthetic training data for Kinect for Xbox 360; and was science lead on the real-time hand tracking in Microsoft's HoloLens. His research interests are broad, spanning computer vision, graphics, machine learning, neuroscience, and most recently programming languages. He has published numerous highly-cited papers, and received many awards for his work, including ten “best paper” prizes at various venues, the Silver medal of the Royal Academy of Engineering, and the BCS Roger Needham award. He is a fellow of the Royal Academy of Engineering, the British Computer Society, and the International Association for Pattern Recognition. Before joining Graphcore in 2022, he spent 15 years at Microsoft, and before then, he was a Royal Society University Research Fellow at Oxford University, having previously studied at Edinburgh University, Heriot-Watt University, and University College, Cork.
 
 - title: Name
   name: Name-2
