--- a/_data/twenty_17/speakers.yml
+++ b/_data/twenty_17/speakers.yml
@@ -1,4 +1,4 @@
-- title: Prof
+- title: Prof.Andrew Fitzgibbon
   name: Andrew Fitzgibbon
   subtitle: Distinguished Engineer at Graphcore
   img: AndrewFitzgibbon.jpg
