--- a/_data/twenty_17/speakers.yml
+++ b/_data/twenty_17/speakers.yml
@@ -1,5 +1,5 @@
 - title: Prof.Andrew Fitzgibbon
-  name: Andrew Fitzgibbon
+  name: Name-1
   subtitle: Distinguished Engineer at Graphcore
   img: AndrewFitzgibbon.jpg
   thumbnail: AndrewFitzgibbon.jpg
@@ -7,14 +7,14 @@
   topic: Topic
   description: Andrew Fitzgibbon is a Distinguished Engineer at Graphcore, working on the future of computing hardware and programming for AI and numerical computing. He is best known for his work on 3D vision. He was a core contributor to the Emmy-award-winning 3D camera tracker “boujou”, having co-founded the company “2d3”, with Andrew Zisserman, Julian Morris, and Nick Bolton; at Microsoft, he introduced massive synthetic training data for Kinect for Xbox 360; and was science lead on the real-time hand tracking in Microsoft's HoloLens. His research interests are broad, spanning computer vision, graphics, machine learning, neuroscience, and most recently programming languages. He has published numerous highly-cited papers, and received many awards for his work, including ten “best paper” prizes at various venues, the Silver medal of the Royal Academy of Engineering, and the BCS Roger Needham award. He is a fellow of the Royal Academy of Engineering, the British Computer Society, and the International Association for Pattern Recognition. Before joining Graphcore in 2022, he spent 15 years at Microsoft, and before then, he was a Royal Society University Research Fellow at Oxford University, having previously studied at Edinburgh University, Heriot-Watt University, and University College, Cork.
 
-- title: Name
+- title: Prof.Ivan Tyukin
   name: Name-2
-  subtitle: Position
-  img: TBD.jpg
-  thumbnail: TBD.jpg
+  subtitle: Professor of Applied Mathematics
+  img: IvanTyukin.jpg
+  thumbnail: IvanTyukin.jpg
   alt: Picture of TBD
   topic: Topic
-  description: More Info
+  description: Professor Ivan Tyukin is an expert in the mathematical foundations of Artificial Intelligence (AI) and learning systems, Machine Learning, mathematical modelling, adaptive systems, inverse problems with nonconvex and nonlinear parameterization, data analytics, and computer vision. Professor Tyukin has been awarded a prestigious Turing AI Acceleration Fellowship to lead innovative and creative AI research with transformative impact. He is a member of the IFAC Technical Committee on Adaptive and Learning Systems, an Editor of Communications in Nonlinear Science and Numerical Simulations, and is a member of the All Party Parliamentary Group on AI's data governance task force which examines the economic, social, and ethical implications of AI. He has a broad network of academic and industrial collaborators includes strategic UK sectors such as public safety and security, health technologies, space and Earth Observation, and manufacturing. Professor Tyukin’s recent work focuses on creating a theory and practice for developing AI systems that are provably robust, resilient, certifiable, trustworthy, human-centric and data-driven. The theory will enable the creation of new-generation AI systems which are certifiably stable, secure, adaptive and maintainable. These systems will be prepared to handle the challenges of adversarial attacks and data inconsistences, uncertainties, and bias inherent within any empirical data. This will enable new gold standard methods and tools in tasks that are currently heavily reliant upon non-deterministic human input to have long-term transformation.
 
 - title: Name
   name: Name-3
