--- a/_data/twenty_17/agendas_1.yml
+++ b/_data/twenty_17/agendas_1.yml
@@ -11,7 +11,7 @@
   info: "<u>Poster Session & Coffee Break</u><br><b>College Court</b><br><i>Lounge</i><br><br>"
 
 - time: 10:30 AM - 11:30 AM
-  info: "<u>KeyNote Speech</u><br><b>TBD</b><br><i>TBD</i><br><br>Topic: TBD"
+  info: "<u>KeyNote Speech</u><br><b>Prof.Edwin Hancock</b><br><i>Emeritus Professor, Department of Computer Science, University of York</i><br><br>Topic: TBD"
 
 - time: 11:30 AM - 12:00 PM
   info: "<u>Poster Session & Coffee Break</u><br><b>College Court</b><br><i>Lounge</i><br><br>"
@@ -20,7 +20,7 @@
   info: "<u>Lunch</u><br><b>College Court</b><br><i>Dining Room</i><br><br>"
 
 - time: 13:00 PM - 14:00 PM
-  info: "<u>KeyNote Speech</u><br><b>Prof.Ivan Tyukin</b><br><i>Professor of Applied Mathematics</i><br><br>Topic: TBD"
+  info: "<u>KeyNote Speech</u><br><b>Prof.Ivan Tyukin</b><br><i>Professor of Applied Mathematics, University of Leicester</i><br><br>Topic: TBD"
 
 - time: 14:00 PM
   info: "<u>Close Speech</u><br><b>TBD</b><br><i>TBD</i><br><br>Topic: TBD"
