--- a/_data/twenty_17/speakers.yml
+++ b/_data/twenty_17/speakers.yml
@@ -1,7 +1,6 @@
 - title: Prof.Andrew Fitzgibbon
   name: Name-1
-  subtitle: Distinguished Engineer
-  affiliation: Graphcore
+  subtitle: Distinguished Engineer, Graphcore
   img: AndrewFitzgibbon.jpg
   thumbnail: AndrewFitzgibbon.jpg
   alt: Picture of TBD
@@ -10,8 +9,7 @@
 
 - title: Prof.Ivan Tyukin
   name: Name-2
-  subtitle: Professor of Applied Mathematics
-  affiliation: CMS, University of Leicester
+  subtitle: Professor of Applied Mathematics, UoL
   img: IvanTyukin.jpg
   thumbnail: IvanTyukin.jpg
   alt: Picture of TBD
@@ -20,8 +18,7 @@
 
 - title: Prof.Edwin Hancock
   name: Name-3
-  subtitle: Emeritus Professor, Department of Computer Science
-  affiliation: Department of Computer Science, University of York
+  subtitle: Emeritus Professor, Uni. of York
   img: EdwinHancock.jpg
   thumbnail: EdwinHancock.jpg
   alt: Picture of TBD
