--- a/_data/twenty_17/home_about_data.yml
+++ b/_data/twenty_17/home_about_data.yml
@@ -8,7 +8,7 @@
   img: icon-team.jpeg
   name: Team
   info: Find out the team members
-  link: /SinoUK2022/team
+  link: https://bipl-uol.github.io/team/
 
 - inverted: timeline-inverted
   img: icon-venue.jpeg
