--- a/_data/twenty_17/home_about_data.yml
+++ b/_data/twenty_17/home_about_data.yml
@@ -26,4 +26,4 @@
   img: booklet-icon.png
   name: Event Booklet
   info: View or Download our event booklet
-  link: /SinoUK2022/booklet
+  link: https://drive.google.com/file/d/1XiFmTdq8bpI_pOBr9L7qSK4l8SadYKk3/view?usp=share_link
