--- a/_data/twenty_17/home_about_data.yml
+++ b/_data/twenty_17/home_about_data.yml
@@ -20,7 +20,7 @@
   img: icon-faq.jpeg
   name: FAQs
   info: Have a Question? Many answers can be found right here in our FAQs
-  link: /SinoUK2022/faqs
+  link: /SinoUK2022/faqs(In development)
 
 - inverted: timeline-inverted
   img: booklet-icon.png
