--- a/_data/twenty_17/home_about_data.yml
+++ b/_data/twenty_17/home_about_data.yml
@@ -13,13 +13,13 @@
 - inverted: timeline-inverted
   img: icon-venue.jpeg
   name: Venue
-  info: Learn more about our location
+  info: Learn more about workshop location
   link: /SinoUK2022/venue
 
 - inverted: 
   img: icon-faq.jpeg
-  name: FAQs
-  info: Have a Question? Many answers can be found right here in our FAQs
+  name: Poster Titles
+  info: Check 
   link: /SinoUK2022/faqs(In development)
 
 - inverted: timeline-inverted
