--- a/_data/twenty_17/home_about_data.yml
+++ b/_data/twenty_17/home_about_data.yml
@@ -20,7 +20,7 @@
   img: icon-faq.jpeg
   name: Poster Titles
   info: Check 
-  link: /SinoUK2022/faqs(In development)
+  link: /SinoUK2022/faqs
 
 - inverted: timeline-inverted
   img: booklet-icon.png
