--- a/_data/twenty_17/faqs.yml
+++ b/_data/twenty_17/faqs.yml
@@ -1,8 +1,8 @@
-- question: PRE-ACT: Prediction of Radiotherapy side Effects using explainable AI for patient Communication and Treatment modification
+- question: PRE-ACT, Prediction of Radiotherapy side Effects using explainable AI for patient Communication and Treatment modification
   answer: Chris Talbot
 
 - question: Spatio-temporal ECG Network for Detecting Cardiac Disorders from Multi-lead ECGs
-  answer: Long Chen,  Zheheng Jiang, Fernando S Schlindwein, G Andre Ng, Huiyu Zhou, Xin Li
+  answer: Long Chen, Zheheng Jiang, Fernando S Schlindwein, G Andre Ng, Huiyu Zhou, Xin Li
 
 - question: Title 3
   answer: Author List 3
