--- a/_data/twenty_17/faqs.yml
+++ b/_data/twenty_17/faqs.yml
@@ -4,11 +4,11 @@
 - question: Spatio-temporal ECG Network for Detecting Cardiac Disorders from Multi-lead ECGs
   answer: Long Chen, Zheheng Jiang, Fernando S Schlindwein, G Andre Ng, Huiyu Zhou, Xin Li
 
-- question: Title 3
-  answer: Author List 3
+- question: Cross-Skeleton Interaction Graph Aggregation Network for Representation Learning of Mouse Social Behaviour
+  answer: Feixiang Zhou, Xinyu Yang, Fang Chen, Long Chen, Zheheng Jiang, Hui Zhu, Reiko Heckel, Haikuan Wang, Minrui Fei, Huiyu Zhou
 
-- question: Title 4
-  answer:  Author List 4
+- question: LSDM/ Long-Short Diffeomorphic Motion for Weakly-Supervised Ultrasound Landmark Tracking
+  answer:  Zhihua Liu, Bin Yang, Huiyu Zhou
 
 - question: Title 5
   answer: Author List 5
