--- a/_data/twenty_17/faqs.yml
+++ b/_data/twenty_17/faqs.yml
@@ -10,8 +10,8 @@
 - question: LSDM/ Long-Short Diffeomorphic Motion for Weakly-Supervised Ultrasound Landmark Tracking
   answer:  Zhihua Liu, Bin Yang, Huiyu Zhou
 
-- question: Title 5
-  answer: Author List 5
+- question: Identifying Cell Lines Using Brightfield Images
+  answer: Lei Tong, Huiyu Zhou, Navin Rathna Kumar, Kerry Hallbrook, Jon Orme, Adam Corrigan, Yinhai Wang
 
 - question: Title 6
   answer: Author List 6
