--- a/_data/twenty_17/home_about_data.yml
+++ b/_data/twenty_17/home_about_data.yml
@@ -19,7 +19,7 @@
 - inverted: 
   img: icon-faq.jpeg
   name: Poster Titles
-  info: Check 
+  info: Check out the seleted posters, with various topics including AI and applications!
   link: /SinoUK2022/faqs
 
 - inverted: timeline-inverted
