--- a/_data/twenty_17/faqs.yml
+++ b/_data/twenty_17/faqs.yml
@@ -13,8 +13,12 @@
 - question: Identifying Cell Lines Using Brightfield Images
   answer: Lei Tong, Huiyu Zhou, Navin Rathna Kumar, Kerry Hallbrook, Jon Orme, Adam Corrigan, Yinhai Wang
 
-- question: Title 6
-  answer: Author List 6
+- question: Oil Spill SAR Image Segmentation via Probability Distribution Modeling
+  answer: Fang Chen, Aihua Zhang, Heiko Balzter, Peng Ren and Huiyu Zhou
 
 - question: Title 7
   answer: Author List 7
+
+- question: Title TBD
+  answer: Author List TBD
+
