--- a/_data/twenty_17/faqs.yml
+++ b/_data/twenty_17/faqs.yml
@@ -7,7 +7,7 @@
 - question: Cross-Skeleton Interaction Graph Aggregation Network for Representation Learning of Mouse Social Behaviour
   answer: Feixiang Zhou, Xinyu Yang, Fang Chen, Long Chen, Zheheng Jiang, Hui Zhu, Reiko Heckel, Haikuan Wang, Minrui Fei, Huiyu Zhou
 
-- question: LSDM/ Long-Short Diffeomorphic Motion for Weakly-Supervised Ultrasound Landmark Tracking
+- question: LSDM, Long-Short Diffeomorphic Motion for Weakly-Supervised Ultrasound Landmark Tracking
   answer:  Zhihua Liu, Bin Yang, Huiyu Zhou
 
 - question: Identifying Cell Lines Using Brightfield Images
@@ -16,8 +16,8 @@
 - question: Oil Spill SAR Image Segmentation via Probability Distribution Modeling
   answer: Fang Chen, Aihua Zhang, Heiko Balzter, Peng Ren and Huiyu Zhou
 
-- question: Title 7
-  answer: Author List 7
+- question: MARLINE, Multi-Source Mapping Transfer Learning for Non-Stationary Environments
+  answer: Honghui Du, Leandro Minku, Huiyu Zhou
 
 - question: Title TBD
   answer: Author List TBD
