--- a/_data/twenty_17/faqs.yml
+++ b/_data/twenty_17/faqs.yml
@@ -1,24 +1,32 @@
 - question: PRE-ACT, Prediction of Radiotherapy side Effects using explainable AI for patient Communication and Treatment modification
   answer: Chris Talbot
+  link:
 
 - question: Spatio-temporal ECG Network for Detecting Cardiac Disorders from Multi-lead ECGs
   answer: Long Chen, Zheheng Jiang, Fernando S Schlindwein, G Andre Ng, Huiyu Zhou, Xin Li
+  link: https://docs.google.com/presentation/d/1RJ6g6ORODfUKOnIL3VYM7lTNy_wJYatI/edit?usp=sharing&ouid=117532325675586355942&rtpof=true&sd=true
 
 - question: Cross-Skeleton Interaction Graph Aggregation Network for Representation Learning of Mouse Social Behaviour
   answer: Feixiang Zhou, Xinyu Yang, Fang Chen, Long Chen, Zheheng Jiang, Hui Zhu, Reiko Heckel, Haikuan Wang, Minrui Fei, Huiyu Zhou
+  link:
 
 - question: LSDM, Long-Short Diffeomorphic Motion for Weakly-Supervised Ultrasound Landmark Tracking
   answer:  Zhihua Liu, Bin Yang, Huiyu Zhou
+  link:
 
 - question: Identifying Cell Lines Using Brightfield Images
   answer: Lei Tong, Huiyu Zhou, Navin Rathna Kumar, Kerry Hallbrook, Jon Orme, Adam Corrigan, Yinhai Wang
+  link:
 
 - question: Oil Spill SAR Image Segmentation via Probability Distribution Modeling
   answer: Fang Chen, Aihua Zhang, Heiko Balzter, Peng Ren and Huiyu Zhou
+  link:
 
 - question: MARLINE, Multi-Source Mapping Transfer Learning for Non-Stationary Environments
   answer: Honghui Du, Leandro Minku, Huiyu Zhou
+  link:
 
 - question: Title TBD
   answer: Author List TBD
+  link:
 
