--- a/_data/twenty_17/faqs.yml
+++ b/_data/twenty_17/faqs.yml
@@ -4,7 +4,7 @@
 
 - question: Spatio-temporal ECG Network for Detecting Cardiac Disorders from Multi-lead ECGs
   answer: Long Chen, Zheheng Jiang, Fernando S Schlindwein, G Andre Ng, Huiyu Zhou, Xin Li
-  link: https://docs.google.com/presentation/d/1RJ6g6ORODfUKOnIL3VYM7lTNy_wJYatI/edit?usp=sharing&ouid=117532325675586355942&rtpof=true&sd=true
+  link: https://drive.google.com/file/d/1A0fIsT0RzgW2lsXa1Wd7apDfMAl_U979/view?usp=share_link
 
 - question: Cross-Skeleton Interaction Graph Aggregation Network for Representation Learning of Mouse Social Behaviour
   answer: Feixiang Zhou, Xinyu Yang, Fang Chen, Long Chen, Zheheng Jiang, Hui Zhu, Reiko Heckel, Haikuan Wang, Minrui Fei, Huiyu Zhou
@@ -16,7 +16,7 @@
 
 - question: Identifying Cell Lines Using Brightfield Images
   answer: Lei Tong, Huiyu Zhou, Navin Rathna Kumar, Kerry Hallbrook, Jon Orme, Adam Corrigan, Yinhai Wang
-  link:
+  link: https://drive.google.com/file/d/18_QiY0YIiYQmFMEG5U-3UbUqr-_ePwPf/view?usp=share_link
 
 - question: Oil Spill SAR Image Segmentation via Probability Distribution Modeling
   answer: Fang Chen, Aihua Zhang, Heiko Balzter, Peng Ren and Huiyu Zhou
