Test on poster.yml

--- a/_data/twenty_17/agendas_1.yml
+++ b/_data/twenty_17/agendas_1.yml
@@ -5,10 +5,10 @@
   info: "<u>Welcome Speech</u><br><b>TBD</b><br><i>Position</i><br><br>"
 
 - time: 9:30 AM - 10:30 AM
-  info: "<u>KeyNote Speech</u><br><b>Prof.Andrew Fitzgibbon</b><br><i>Distinguished Engineer at Graphcore</i><br><br>Topic: AI Hardware and Real-world AI"
+  info: "<u>KeyNote Speech</u><br><b>Prof.Andrew Fitzgibbon (FREng)</b><br><i>Distinguished Engineer at Graphcore</i><br><br>Topic: AI Hardware and Real-world AI"
 
 - time: 10:45 AM - 11:45 AM
-  info: "<u>KeyNote Speech</u><br><b>Prof.Edwin Hancock</b><br><i>Emeritus Professor, Department of Computer Science, University of York</i><br><br>Topic: TBD"
+  info: "<u>KeyNote Speech</u><br><b>Prof.Edwin Hancock (FREng)</b><br><i>Emeritus Professor, Department of Computer Science, University of York</i><br><br>Topic: TBD"
 
 - time: 12:00 AM - 13:00 AM
   info: "<u>Lunch</u><br><b>College Court</b><br><i>Dining Room</i><br><br>"
