--- a/_data/twenty_17/faqs.yml
+++ b/_data/twenty_17/faqs.yml
@@ -16,7 +16,7 @@
 
 - question: Identifying Cell Lines Using Brightfield Images
   answer: Lei Tong, Huiyu Zhou, Navin Rathna Kumar, Kerry Hallbrook, Jon Orme, Adam Corrigan, Yinhai Wang
-  link: https://drive.google.com/file/d/18_QiY0YIiYQmFMEG5U-3UbUqr-_ePwPf/view?usp=share_link
+  link:
 
 - question: Oil Spill SAR Image Segmentation via Probability Distribution Modeling
   answer: Fang Chen, Aihua Zhang, Heiko Balzter, Peng Ren and Huiyu Zhou
