Update Edwin topic

--- a/_data/twenty_17/agendas_1.yml
+++ b/_data/twenty_17/agendas_1.yml
@@ -8,7 +8,7 @@
   info: "<u>KeyNote Speech</u><br><b>Prof.Andrew Fitzgibbon (FREng)</b><br><i>Distinguished Engineer at Graphcore</i><br><br>Topic: AI Hardware and Real-world AI"
 
 - time: 10:45 AM - 11:45 AM
-  info: "<u>KeyNote Speech</u><br><b>Prof.Edwin Hancock (FREng)</b><br><i>Emeritus Professor, Department of Computer Science, University of York</i><br><br>Topic: TBD"
+  info: "<u>KeyNote Speech</u><br><b>Prof.Edwin Hancock (FREng)</b><br><i>Emeritus Professor, Department of Computer Science, University of York</i><br><br>Topic: Reconstructing 1930's East Greenland Glaciers using Structure-from-motion"
 
 - time: 12:00 AM - 13:00 AM
   info: "<u>Lunch</u><br><b>College Court</b><br><i>Dining Room</i><br><br>"
