--- a/_data/twenty_17/faqs.yml
+++ b/_data/twenty_17/faqs.yml
@@ -8,7 +8,7 @@
 
 - question: Cross-Skeleton Interaction Graph Aggregation Network for Representation Learning of Mouse Social Behaviour
   answer: Feixiang Zhou, Xinyu Yang, Fang Chen, Long Chen, Zheheng Jiang, Hui Zhu, Reiko Heckel, Haikuan Wang, Minrui Fei, Huiyu Zhou
-  link:
+  link: https://drive.google.com/file/d/1HmZyGp5eL-NbMa9vJv-wzVkwR6ro06x-/view?usp=share_link
 
 - question: LSDM, Long-Short Diffeomorphic Motion for Weakly-Supervised Ultrasound Landmark Tracking
   answer:  Zhihua Liu, Bin Yang, Huiyu Zhou
