Update lunch menu

--- a/_data/twenty_17/home_about_data.yml
+++ b/_data/twenty_17/home_about_data.yml
@@ -24,6 +24,6 @@
 
 - inverted: timeline-inverted
   img: booklet-icon.png
-  name: Event Booklet
-  info: View or Download our event booklet
-  link: https://drive.google.com/file/d/1XiFmTdq8bpI_pOBr9L7qSK4l8SadYKk3/view?usp=share_link
+  name: Lunch Menu
+  info: View Worlshop Lunch Menu
+  link: https://drive.google.com/file/d/1yummkSs0B2kWf8zVIxvs9WmFrfG7DnXU/view?usp=share_link
