--- a/_data/twenty_17/agendas_1.yml
+++ b/_data/twenty_17/agendas_1.yml
@@ -1,5 +1,5 @@
 - time: 8:00 AM - 9:00 AM
-  info: "<u>Registration & Morning Coffee</u><br><b>College Court Lounge</b><br><i></i><br><br>"
+  info: "<u>Registration & Morning Coffee</u><br><b>College Court</b><br><i>Caffee Lounge</i><br><br>"
 
 - time: 9:00 AM - 9:05 AM
   info: "<u>Logistics</u><br><b>Prof. Huiyu Zhou</b><br><i>Professor, School of Computing and Mathematic Sciences, University of Leicester</i><br><br>"
@@ -26,4 +26,4 @@
   info: "<u>Close Speech</u><br><b>TBD</b><br><i>TBD</i><br><br>Topic: TBD"
 
 - time: Through Out the Day
-  info: "<u>Poster Section</u><br><b></b><br><i></i><br><br>"
+  info: "<u>Poster Section</u><br><b>College Court</b><br><i>Caffee Lounge</i><br><br>"
