--- a/_data/twenty_17/faqs.yml
+++ b/_data/twenty_17/faqs.yml
@@ -1,6 +1,6 @@
 - question: PRE-ACT, Prediction of Radiotherapy side Effects using explainable AI for patient Communication and Treatment modification
-  answer: Chris Talbot
-  link:
+  answer: Chris Talbot, Adam Webb, Tim Rattay
+  link: https://drive.google.com/file/d/15l348LtB2ked9qwQs0RL6ux4CHouNn94/view?usp=share_link
 
 - question: Spatio-temporal ECG Network for Detecting Cardiac Disorders from Multi-lead ECGs
   answer: Long Chen, Zheheng Jiang, Fernando S Schlindwein, G Andre Ng, Huiyu Zhou, Xin Li
